# dfkit

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: commands.rs  convert.rs  describe.rs  lib.rs  query.rs  utils.rs  view.rs
tests/: .test.rs.pending-snap  test.rs  test_utils.rs
tests/data/: concat.csv  userdata1.csv
tests/data/chunks/: userdata1_1.csv  userdata1_2.csv  userdata1_3.csv  userdata1_4.csv  userdata1_5.csv
tests/snapshots/: test__split_stdout.snap.new
