[package]
name = "dfkit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dfkit"
path = "src/bin/main.rs"

[dependencies]
datafusion = {version = "46.0.1", features = ["avro"]}
structopt = "0.3.26"
thiserror = "2.0.12"
tokio = { version="1.44.2", features = ["rt-multi-thread"]}

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
