[package]
name = "dfkit"
version = "0.2.0"
edition = "2024"
description = "A command-line toolkit for querying and transforming CSV, JSON, Parquet, and Avro data."
repository = "https://github.com/jsai28/dfkit"
license = "MIT"
keywords = ["cli", "datafusion", "data", "query"]
categories = ["command-line-utilities"]
authors = ["Jyotir Sai <jyotirsai28@gmail.com>"]

[[bin]]
name = "dfkit"
path = "src/bin/main.rs"

[dependencies]
datafusion = {version = "46.0.1", features = ["avro"]}
structopt = "0.3.26"
thiserror = "2.0.12"
tokio = { version="1.44.2", features = ["rt-multi-thread"]}
predicates = "3.1.3"
reqwest = "0.12.15"
tempfile = "3"
object_store = "0.12.0"
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
